google search 수정

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ social:
     - https://github.com/han-0315
     - https://linkedin.com/in/dongbee-66226229a
 
-google_site_verification:
+google_site_verification: 1234567890abcdefg # Google Search Console verification code
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
 google_analytics:
