Update mapping file: df7e0a3c95a040e2a64b7ba7eb37aa55

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -153,5 +153,10 @@
     "id": "f19c72dfd9f84d64b3fb798404fd80b0",
     "update_date": "2024-01-10",
     "post_title": "2024-01-10-파드 네트워크 이해하기"
+  },
+  {
+    "id": "df7e0a3c95a040e2a64b7ba7eb37aa55",
+    "update_date": "2024-01-12",
+    "post_title": "2024-01-12-서비스 네트워크 모델 이해하기"
   }
 ]
