--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -158,5 +158,10 @@
     "id": "df7e0a3c95a040e2a64b7ba7eb37aa55",
     "update_date": "2024-01-12",
     "post_title": "2024-01-12-서비스 네트워크 모델 이해하기"
+  },
+  {
+    "id": "40de99efcc0a426dbd8375169f95dfeb",
+    "update_date": "2024-01-19",
+    "post_title": "2024-01-19-LXC(Linux Container)"
   }
 ]
