--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -163,5 +163,10 @@
     "id": "40de99efcc0a426dbd8375169f95dfeb",
     "update_date": "2024-01-19",
     "post_title": "2024-01-19-LXC(Linux Container)"
+  },
+  {
+    "id": "86590244e8aa451d948c75770a0b38fd",
+    "update_date": "2024-01-22",
+    "post_title": "2024-01-22-Docker Storage"
   }
 ]
