Update mapping file: 9c8075893d104a86a5bdee5c31607009

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -173,5 +173,10 @@
     "id": "db9b233e247d41588f49344c68a09602",
     "update_date": "2024-01-24",
     "post_title": "2024-01-24-Search Console 인덱싱자동화"
+  },
+  {
+    "id": "9c8075893d104a86a5bdee5c31607009",
+    "update_date": "2024-01-26",
+    "post_title": "2024-01-26-Terraform Associate 003"
   }
 ]
