Update mapping file: 3ee32a819d5f4176bc4ee3456cbc69f7

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -178,5 +178,10 @@
     "id": "9c8075893d104a86a5bdee5c31607009",
     "update_date": "2024-01-26",
     "post_title": "2024-01-26-Terraform Associate 003"
+  },
+  {
+    "id": "3ee32a819d5f4176bc4ee3456cbc69f7",
+    "update_date": "2024-01-28",
+    "post_title": "2024-01-28-CKA 취득 후기"
   }
 ]
