Update mapping file: c8ca0a427caf424a8f5ad1ad7b56081c

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -183,5 +183,10 @@
     "id": "3ee32a819d5f4176bc4ee3456cbc69f7",
     "update_date": "2024-01-28",
     "post_title": "2024-01-28-CKA 취득 후기"
+  },
+  {
+    "id": "c8ca0a427caf424a8f5ad1ad7b56081c",
+    "update_date": "2024-02-08",
+    "post_title": "2024-02-08-Mac 스페이스 연타시 오류"
   }
 ]
