Update mapping file: 3bef2a02d0ad42a489f13c7240cc1c42

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -188,5 +188,10 @@
     "id": "c8ca0a427caf424a8f5ad1ad7b56081c",
     "update_date": "2024-02-08",
     "post_title": "2024-02-08-Mac 스페이스 연타시 오류"
+  },
+  {
+    "id": "3bef2a02d0ad42a489f13c7240cc1c42",
+    "update_date": "2024-02-24",
+    "post_title": "2024-02-24-블로그 100일 후기"
   }
 ]
