Update mapping file: d975676fe35445aeb6be86bb82b346d1

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -193,5 +193,10 @@
     "id": "3bef2a02d0ad42a489f13c7240cc1c42",
     "update_date": "2024-02-24",
     "post_title": "2024-02-24-블로그 100일 후기"
+  },
+  {
+    "id": "d975676fe35445aeb6be86bb82b346d1",
+    "update_date": "2024-02-27",
+    "post_title": "2024-02-27-ALB(L7)"
   }
 ]
