--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 theme: jekyll-theme-chirpy
 lang: ko
 timezone: Asia/Seoul
-title: 한많은 개발일기 # the main title
+title: 86.5도씨 # the main title
 
 tagline: # it will display as the sub-title
 
