Update mapping file: 796efcdd316f496dad52feb7684fb81f

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -198,5 +198,10 @@
     "id": "d975676fe35445aeb6be86bb82b346d1",
     "update_date": "2024-02-27",
     "post_title": "2024-02-27-ALB(L7)"
+  },
+  {
+    "id": "796efcdd316f496dad52feb7684fb81f",
+    "update_date": "2024-03-05",
+    "post_title": "2024-03-05-S3 보안관련"
   }
 ]
