--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -203,5 +203,10 @@
     "id": "796efcdd316f496dad52feb7684fb81f",
     "update_date": "2024-03-05",
     "post_title": "2024-03-05-S3 보안관련"
+  },
+  {
+    "id": "8caf214bbd774bca9de3a621eefa48f4",
+    "update_date": "2024-03-05",
+    "post_title": "2024-03-05-Search Console 인덱싱자동화2"
   }
 ]
