Update mapping file: c60b0a6e00784cdf8e13f2c8a6a6e657

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -208,5 +208,10 @@
     "id": "8caf214bbd774bca9de3a621eefa48f4",
     "update_date": "2024-03-05",
     "post_title": "2024-03-05-Search Console 인덱싱자동화2"
+  },
+  {
+    "id": "c60b0a6e00784cdf8e13f2c8a6a6e657",
+    "update_date": "2024-03-06",
+    "post_title": "2024-03-06-S3 정리"
   }
 ]
