Update mapping file: 11d0fd99bc73496490ad87b6a1c5c270

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -213,5 +213,10 @@
     "id": "c60b0a6e00784cdf8e13f2c8a6a6e657",
     "update_date": "2024-03-06",
     "post_title": "2024-03-06-S3 정리"
+  },
+  {
+    "id": "11d0fd99bc73496490ad87b6a1c5c270",
+    "update_date": "2024-03-06",
+    "post_title": "2024-03-06-S3 이벤트 실습"
   }
 ]
