--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -218,5 +218,10 @@
     "id": "11d0fd99bc73496490ad87b6a1c5c270",
     "update_date": "2024-03-06",
     "post_title": "2024-03-06-S3 이벤트 실습"
+  },
+  {
+    "id": "39666da5177e4cc8acf140345db4663c",
+    "update_date": "2024-03-06",
+    "post_title": "2024-03-06-Lambda 정리"
   }
 ]
