Update mapping file: af967cee51414a51a251a0e64ffc1954

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -223,5 +223,10 @@
     "id": "39666da5177e4cc8acf140345db4663c",
     "update_date": "2024-03-06",
     "post_title": "2024-03-06-Lambda 정리"
+  },
+  {
+    "id": "af967cee51414a51a251a0e64ffc1954",
+    "update_date": "2024-03-08",
+    "post_title": "2024-03-08-뽀모도로 1달 후기"
   }
 ]
