Update mapping file: abe97c3975f447b79bbddc107090e1c5

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -228,5 +228,10 @@
     "id": "af967cee51414a51a251a0e64ffc1954",
     "update_date": "2024-03-08",
     "post_title": "2024-03-08-뽀모도로 1달 후기"
+  },
+  {
+    "id": "abe97c3975f447b79bbddc107090e1c5",
+    "update_date": "2024-03-10",
+    "post_title": "2024-03-10-Search Console 인덱싱자동화3"
   }
 ]
