Update mapping file: 91718d8d17a44f81bd8ef45255add261

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -233,5 +233,10 @@
     "id": "abe97c3975f447b79bbddc107090e1c5",
     "update_date": "2024-03-10",
     "post_title": "2024-03-10-Search Console 인덱싱자동화3"
+  },
+  {
+    "id": "91718d8d17a44f81bd8ef45255add261",
+    "update_date": "2024-03-12",
+    "post_title": "2024-03-12-깃허브 블로그와 노션 연동하기 "
   }
 ]
