Update mapping file: 90472821f16e4dc0a0ca6ba9284d5ad4

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -243,5 +243,10 @@
     "id": "dddb2eebd23f4db99648a42dbac83074",
     "update_date": "2024-03-12",
     "post_title": "2024-03-12-깃허브 블로그와 노션 연동하기 [인프라]"
+  },
+  {
+    "id": "90472821f16e4dc0a0ca6ba9284d5ad4",
+    "update_date": "2024-03-12",
+    "post_title": "2024-03-12-깃허브 블로그와 노션 연동하기 [프로젝트]"
   }
 ]
