--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -248,5 +248,10 @@
     "id": "90472821f16e4dc0a0ca6ba9284d5ad4",
     "update_date": "2024-03-12",
     "post_title": "2024-03-12-깃허브 블로그와 노션 연동하기 [프로젝트]"
+  },
+  {
+    "id": "1ba79fec522c44c093e4eaff50df5241",
+    "update_date": "2024-03-12",
+    "post_title": "2024-03-12-깃허브 블로그와 노션 연동하기 [결과]"
   }
 ]
