--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -253,5 +253,10 @@
     "id": "1ba79fec522c44c093e4eaff50df5241",
     "update_date": "2024-03-12",
     "post_title": "2024-03-12-깃허브 블로그와 노션 연동하기 [결과]"
+  },
+  {
+    "id": "78f2fc5fcd074fb0af4f764a433de427",
+    "update_date": "2024-03-16",
+    "post_title": "2024-03-16-Linux Link 정리"
   }
 ]
