Create Post: 2024-03-16-Linux File System 정리

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -258,5 +258,10 @@
     "id": "78f2fc5fcd074fb0af4f764a433de427",
     "update_date": "2024-03-16",
     "post_title": "2024-03-16-Linux Link 정리"
+  },
+  {
+    "id": "1d38153104384ecab8ac2fef61465e59",
+    "update_date": "2024-03-16",
+    "post_title": "2024-03-16-Linux File System 정리"
   }
 ]
