--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -263,5 +263,10 @@
     "id": "1d38153104384ecab8ac2fef61465e59",
     "update_date": "2024-03-16",
     "post_title": "2024-03-16-Linux File System 정리"
+  },
+  {
+    "id": "cdbc3d6ec6524cb98c2ae27b00c0cc6d",
+    "update_date": "2024-03-21",
+    "post_title": "2024-03-21-Kubeproxy vs CNI"
   }
 ]
