--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -268,5 +268,10 @@
     "id": "cdbc3d6ec6524cb98c2ae27b00c0cc6d",
     "update_date": "2024-03-21",
     "post_title": "2024-03-21-Kubeproxy vs CNI"
+  },
+  {
+    "id": "e312fe17d2cd4477b63a0de4a89022f2",
+    "update_date": "2024-03-27",
+    "post_title": "2024-03-27-Kubernetes Application 관련 정리"
   }
 ]
