--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -283,5 +283,10 @@
     "id": "7530019ba1594a0da4b7786645a1de3e",
     "update_date": "2024-04-04",
     "post_title": "2024-04-04-인증(Authentication)"
+  },
+  {
+    "id": "1bdc8514326d43ca91d9c0d50e842119",
+    "update_date": "2024-04-04",
+    "post_title": "2024-04-04-인가(Authorization)"
   }
 ]
