Update mapping file: 3a18cfd5e68e45d0875b7ed178b2c9fb

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -288,5 +288,10 @@
     "id": "1bdc8514326d43ca91d9c0d50e842119",
     "update_date": "2024-04-04",
     "post_title": "2024-04-04-인가(Authorization)"
+  },
+  {
+    "id": "3a18cfd5e68e45d0875b7ed178b2c9fb",
+    "update_date": "2024-04-07",
+    "post_title": "2024-04-07-따끈따근한 CKAD 취득 후기"
   }
 ]
