--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -237,7 +237,7 @@
   {
     "id": "91718d8d17a44f81bd8ef45255add261",
     "update_date": "2024-03-12",
-    "post_title": "2024-03-12-깃허브 블로그와 노션 연동하기 "
+    "post_title": "2024-03-12-깃허브 블로그와 노션 연동하기 [배경]"
   },
   {
     "id": "dddb2eebd23f4db99648a42dbac83074",
