update: mapping.json

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -292,7 +292,7 @@
   {
     "id": "3a18cfd5e68e45d0875b7ed178b2c9fb",
     "update_date": "2024-04-07",
-    "post_title": "2024-04-07-따끈따근한 CKAD 취득 후기"
+    "post_title": "2024-04-07-따끈따끈한 CKAD 취득 후기"
   },
   {
     "id": "dfaf4b1b06394fe5a6f41db619ae3d27",
