Update mapping file: 7cecb5e4395e40bb92cbe0de0cc24f30

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -303,5 +303,10 @@
     "id": "b2355ae03c064dacbcde36bccff59a83",
     "update_date": "2024-05-06",
     "post_title": "2024-05-06-데이터베이스 정리"
+  },
+  {
+    "id": "7cecb5e4395e40bb92cbe0de0cc24f30",
+    "update_date": "2024-05-11",
+    "post_title": "2024-05-11-블로그 6개월 후기"
   }
 ]
