--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -308,5 +308,15 @@
     "id": "7cecb5e4395e40bb92cbe0de0cc24f30",
     "update_date": "2024-05-11",
     "post_title": "2024-05-11-블로그 6개월 후기"
+  },
+  {
+    "id": "33a11758b73a4d128f4d84035942485b",
+    "update_date": "2024-05-29",
+    "post_title": "2024-05-29-temp"
+  },
+  {
+    "id": "45aa9f8d064e4e6785a1bc051dfc2091",
+    "update_date": "2024-06-02",
+    "post_title": "2024-06-02-etcd"
   }
 ]
