--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -318,5 +318,10 @@
     "id": "45aa9f8d064e4e6785a1bc051dfc2091",
     "update_date": "2024-06-02",
     "post_title": "2024-06-02-etcd"
+  },
+  {
+    "id": "6fb66e111d7b491c9ab05cf5c18bb711",
+    "update_date": "2024-06-22",
+    "post_title": "2024-06-22-컨테이너와 Docker"
   }
 ]
