--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -323,5 +323,10 @@
     "id": "6fb66e111d7b491c9ab05cf5c18bb711",
     "update_date": "2024-06-22",
     "post_title": "2024-06-22-컨테이너와 Docker"
+  },
+  {
+    "id": "425c11a84aed4adb90d854d3af1f95f6",
+    "update_date": "2024-06-29",
+    "post_title": "2024-06-29-CKS 후기"
   }
 ]
