Create Post: 2024-07-21-KCNA 취득 후기

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -328,5 +328,10 @@
     "id": "425c11a84aed4adb90d854d3af1f95f6",
     "update_date": "2024-06-29",
     "post_title": "2024-06-29-CKS 후기"
+  },
+  {
+    "id": "0f80dd0ee9ec4b0a8a2a16adae92e350",
+    "update_date": "2024-07-21",
+    "post_title": "2024-07-21-KCNA 취득 후기"
   }
 ]
