--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -333,5 +333,10 @@
     "id": "0f80dd0ee9ec4b0a8a2a16adae92e350",
     "update_date": "2024-07-21",
     "post_title": "2024-07-21-KCNA 취득 후기"
+  },
+  {
+    "id": "31adfe5af4db4a918728fa71b713e2bf",
+    "update_date": "2024-08-31",
+    "post_title": "2024-08-31-Process와 Container"
   }
 ]
