--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -338,5 +338,10 @@
     "id": "31adfe5af4db4a918728fa71b713e2bf",
     "update_date": "2024-08-31",
     "post_title": "2024-08-31-Process와 Container"
+  },
+  {
+    "id": "f5ea0d68fed64b54a8eb381def5466db",
+    "update_date": "2024-08-31",
+    "post_title": "2024-08-31-Docker 없이 컨테이너 만들기 "
   }
 ]
