Update mapping file: 30595ae557ec48099841bf0694af3c11

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -343,5 +343,10 @@
     "id": "f5ea0d68fed64b54a8eb381def5466db",
     "update_date": "2024-08-31",
     "post_title": "2024-08-31-Docker 없이 컨테이너 만들기 "
+  },
+  {
+    "id": "30595ae557ec48099841bf0694af3c11",
+    "update_date": "2024-08-31",
+    "post_title": "2024-08-31-Docker 들여다보기"
   }
 ]
