Update mapping file: 5a63ab0e19214148ba0dec2854098b76

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -348,5 +348,10 @@
     "id": "30595ae557ec48099841bf0694af3c11",
     "update_date": "2024-08-31",
     "post_title": "2024-08-31-Docker 들여다보기"
+  },
+  {
+    "id": "5a63ab0e19214148ba0dec2854098b76",
+    "update_date": "2024-08-31",
+    "post_title": "2024-08-31-Docker Network"
   }
 ]
