--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -353,5 +353,10 @@
     "id": "5a63ab0e19214148ba0dec2854098b76",
     "update_date": "2024-08-31",
     "post_title": "2024-08-31-Docker Network"
+  },
+  {
+    "id": "152673e485c34de782c403d07457c9cd",
+    "update_date": "2024-09-06",
+    "post_title": "2024-09-06-kind"
   }
 ]
