Update mapping file: feb4deb6549b435abb10e0c527457a4e

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -358,5 +358,10 @@
     "id": "152673e485c34de782c403d07457c9cd",
     "update_date": "2024-09-06",
     "post_title": "2024-09-06-kind"
+  },
+  {
+    "id": "feb4deb6549b435abb10e0c527457a4e",
+    "update_date": "2024-09-06",
+    "post_title": "2024-09-06-PAUSE 컨테이너(Pod)"
   }
 ]
