Update mapping file: 103338d795b88062b7e1ebd4644e04d1

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -368,5 +368,10 @@
     "id": "957e66f1362a4949bd1742e13c41b218",
     "update_date": "2024-09-06",
     "post_title": "2024-09-06-Flannel 정리(CNI)"
+  },
+  {
+    "id": "103338d795b88062b7e1ebd4644e04d1",
+    "update_date": "2024-09-16",
+    "post_title": "2024-09-16-Calico 이해하기"
   }
 ]
