--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -373,5 +373,10 @@
     "id": "103338d795b88062b7e1ebd4644e04d1",
     "update_date": "2024-09-16",
     "post_title": "2024-09-16-Calico 이해하기"
+  },
+  {
+    "id": "103338d795b8809096b0f2d755ec5aee",
+    "update_date": "2024-09-16",
+    "post_title": "2024-09-16-Calico 파드 통신"
   }
 ]
