Update mapping file: 103338d795b88092a694fa33749c6932

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -383,5 +383,10 @@
     "id": "103338d795b880c2a621e9456c93e835",
     "update_date": "2024-09-16",
     "post_title": "2024-09-16-Calico 네트워크 모드"
+  },
+  {
+    "id": "103338d795b88092a694fa33749c6932",
+    "update_date": "2024-09-16",
+    "post_title": "2024-09-16-Calico 보안 기능"
   }
 ]
