--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -388,5 +388,10 @@
     "id": "103338d795b88092a694fa33749c6932",
     "update_date": "2024-09-16",
     "post_title": "2024-09-16-Calico 보안 기능"
+  },
+  {
+    "id": "10f338d795b8804cbcfcf5529d363761",
+    "update_date": "2024-09-28",
+    "post_title": "2024-09-28-서비스 네트워크"
   }
 ]
