--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -393,5 +393,10 @@
     "id": "10f338d795b8804cbcfcf5529d363761",
     "update_date": "2024-09-28",
     "post_title": "2024-09-28-서비스 네트워크"
+  },
+  {
+    "id": "10f338d795b880c9a916f6580ba928d4",
+    "update_date": "2024-09-29",
+    "post_title": "2024-09-29-서비스 네트워크 session 옵션 살펴보기"
   }
 ]
