--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -403,5 +403,10 @@
     "id": "115338d795b8800fab4bdb6552d740a3",
     "update_date": "2024-10-04",
     "post_title": "2024-10-04-MetalLB 알아보기"
+  },
+  {
+    "id": "11d338d795b8804a8b2ee7e11f225062",
+    "update_date": "2024-10-13",
+    "post_title": "2024-10-13-Ingress & Gateway 살펴보기"
   }
 ]
