Update mapping file: 124338d795b8807698f8f078f59effc3

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -413,5 +413,10 @@
     "id": "124338d795b8809cb4cbf15ec5c63fca",
     "update_date": "2024-10-20",
     "post_title": "2024-10-20-istio"
+  },
+  {
+    "id": "124338d795b8807698f8f078f59effc3",
+    "update_date": "2024-10-20",
+    "post_title": "2024-10-20-Proxy(Pingora)"
   }
 ]
