--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -423,5 +423,10 @@
     "id": "12b338d795b88012b571e4205f233143",
     "update_date": "2024-10-27",
     "post_title": "2024-10-27-ebpf"
+  },
+  {
+    "id": "12b338d795b880d986f0c2a3e4905781",
+    "update_date": "2024-10-27",
+    "post_title": "2024-10-27-Cilium 살펴보기"
   }
 ]
