--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -438,5 +438,10 @@
     "id": "131338d795b8808aaeb8c41efa97ebdd",
     "update_date": "2024-11-01",
     "post_title": "2024-11-01-Cilium 실습편"
+  },
+  {
+    "id": "132338d795b880088b48d6cd1b1cfd2c",
+    "update_date": "2024-11-03",
+    "post_title": "2024-11-03-AWS EKS Network 살펴보기"
   }
 ]
