--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,7 +1,7 @@
 #  The contact options.
 
-- type: github
-  icon: "fab fa-github"
+# - type: github
+#   icon: "fab fa-github"
 
 - type: email
   icon: "fas fa-envelope"
