--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -443,5 +443,10 @@
     "id": "132338d795b880088b48d6cd1b1cfd2c",
     "update_date": "2024-11-03",
     "post_title": "2024-11-03-AWS EKS Network 살펴보기"
+  },
+  {
+    "id": "180338d795b8808baa0afe104740ad82",
+    "update_date": "2025-01-19",
+    "post_title": "2025-01-19-WireGuard"
   }
 ]
