--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -448,5 +448,10 @@
     "id": "180338d795b8808baa0afe104740ad82",
     "update_date": "2025-01-19",
     "post_title": "2025-01-19-WireGuard"
+  },
+  {
+    "id": "18b338d795b880acb067ece1676a20e4",
+    "update_date": "2025-01-30",
+    "post_title": "2025-01-30-WireGuard "
   }
 ]
