Update mapping file: 18e338d795b8803f86b6f9fb2c0e72dc

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -453,5 +453,10 @@
     "id": "18b338d795b880acb067ece1676a20e4",
     "update_date": "2025-01-30",
     "post_title": "2025-01-30-WireGuard "
+  },
+  {
+    "id": "18e338d795b8803f86b6f9fb2c0e72dc",
+    "update_date": "2025-02-02",
+    "post_title": "2025-02-02-TCP_Linux"
   }
 ]
