Update mapping file: 194338d795b880a0a8aaec20a55fe72f

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -458,5 +458,10 @@
     "id": "18e338d795b8803f86b6f9fb2c0e72dc",
     "update_date": "2025-02-02",
     "post_title": "2025-02-02-TCP_Linux"
+  },
+  {
+    "id": "194338d795b880a0a8aaec20a55fe72f",
+    "update_date": "2025-02-08",
+    "post_title": "2025-02-08-컨테이너 격리 기술 살펴보기(1)"
   }
 ]
