Update mapping file: 194338d795b88045a178c999911c0764

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -463,5 +463,10 @@
     "id": "194338d795b880a0a8aaec20a55fe72f",
     "update_date": "2025-02-08",
     "post_title": "2025-02-08-컨테이너 격리 기술 살펴보기(1)"
+  },
+  {
+    "id": "194338d795b88045a178c999911c0764",
+    "update_date": "2025-02-08",
+    "post_title": "2025-02-08-컨테이너 격리 기술 살펴보기(2)"
   }
 ]
