Update mapping file: 194338d795b880af87f7ee1df97d8254

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -468,5 +468,10 @@
     "id": "194338d795b88045a178c999911c0764",
     "update_date": "2025-02-08",
     "post_title": "2025-02-08-컨테이너 격리 기술 살펴보기(2)"
+  },
+  {
+    "id": "194338d795b880af87f7ee1df97d8254",
+    "update_date": "2025-02-08",
+    "post_title": "2025-02-08-컨테이너 격리 기술 살펴보기(3)"
   }
 ]
