Update mapping file: 19e338d795b88013bc71e7d59c2dd035

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -473,5 +473,10 @@
     "id": "194338d795b880af87f7ee1df97d8254",
     "update_date": "2025-02-08",
     "post_title": "2025-02-08-컨테이너 격리 기술 살펴보기(3)"
+  },
+  {
+    "id": "19e338d795b88013bc71e7d59c2dd035",
+    "update_date": "2025-03-03",
+    "post_title": "2025-03-03-Flannel 코드 분석하기 (1편)"
   }
 ]
