Update mapping file: 1d4338d795b880a39140f41ad645c978

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -478,5 +478,10 @@
     "id": "19e338d795b88013bc71e7d59c2dd035",
     "update_date": "2025-03-03",
     "post_title": "2025-03-03-Flannel 코드 분석하기 (1편)"
+  },
+  {
+    "id": "1d4338d795b880a39140f41ad645c978",
+    "update_date": "2025-04-13",
+    "post_title": "2025-04-13-서비스 매시와 istio"
   }
 ]
