--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -483,5 +483,10 @@
     "id": "1d4338d795b880a39140f41ad645c978",
     "update_date": "2025-04-13",
     "post_title": "2025-04-13-서비스 매시와 istio"
+  },
+  {
+    "id": "1da338d795b8804d8a80c858c06fb408",
+    "update_date": "2025-04-20",
+    "post_title": "2025-04-20-Envoy"
   }
 ]
