Update mapping file: 1da338d795b8804d8a80c858c06fb408

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -488,5 +488,10 @@
     "id": "1da338d795b88088900ac0678cf5dce8",
     "update_date": "2025-04-20",
     "post_title": "2025-04-20-istio gateway"
+  },
+  {
+    "id": "1da338d795b8804d8a80c858c06fb408",
+    "update_date": "2025-04-20",
+    "post_title": "2025-04-20-Envoy"
   }
 ]
