Update mapping file: 1e1338d795b880339da9f76ba571266f

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -493,5 +493,10 @@
     "id": "1da338d795b8804d8a80c858c06fb408",
     "update_date": "2025-04-20",
     "post_title": "2025-04-20-Envoy"
+  },
+  {
+    "id": "1e1338d795b880339da9f76ba571266f",
+    "update_date": "2025-04-27",
+    "post_title": "2025-04-27-트래픽 제어"
   }
 ]
