Update mapping file: 1e1338d795b880cd88e9ed885430b787

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -498,5 +498,10 @@
     "id": "1e1338d795b880339da9f76ba571266f",
     "update_date": "2025-04-27",
     "post_title": "2025-04-27-트래픽 제어"
+  },
+  {
+    "id": "1e1338d795b880cd88e9ed885430b787",
+    "update_date": "2025-04-27",
+    "post_title": "2025-04-27-복원성"
   }
 ]
