--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -508,5 +508,10 @@
     "id": "1e8338d795b88084a02fe96a6acdf05a",
     "update_date": "2025-05-04",
     "post_title": "2025-05-04-Istio Observability(Metric)"
+  },
+  {
+    "id": "1e8338d795b880f9b5adcab23dcdeee4",
+    "update_date": "2025-05-04",
+    "post_title": "2025-05-04-Istio Observability(분산 트레이싱)"
   }
 ]
