--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -518,5 +518,10 @@
     "id": "1e8338d795b88080883dc02d840cffff",
     "update_date": "2025-05-04",
     "post_title": "2025-05-04-Istio Observability(DashBoard)"
+  },
+  {
+    "id": "1ef338d795b88047a71bf9bb0921bb7f",
+    "update_date": "2025-05-11",
+    "post_title": "2025-05-11-istio Security"
   }
 ]
