Update mapping file: 1e9338d795b880408fedca190ccfe4df

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -523,5 +523,10 @@
     "id": "1ef338d795b88047a71bf9bb0921bb7f",
     "update_date": "2025-05-11",
     "post_title": "2025-05-11-istio Security"
+  },
+  {
+    "id": "1e9338d795b880408fedca190ccfe4df",
+    "update_date": "2025-05-11",
+    "post_title": "2025-05-11-istio Security(인증)"
   }
 ]
