--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -528,5 +528,10 @@
     "id": "1e9338d795b880408fedca190ccfe4df",
     "update_date": "2025-05-11",
     "post_title": "2025-05-11-istio Security(인증)"
+  },
+  {
+    "id": "1e9338d795b880519141e4bc8f143c40",
+    "update_date": "2025-05-11",
+    "post_title": "2025-05-11-istio Security(인가)"
   }
 ]
