--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -533,5 +533,10 @@
     "id": "1e9338d795b880519141e4bc8f143c40",
     "update_date": "2025-05-11",
     "post_title": "2025-05-11-istio Security(인가)"
+  },
+  {
+    "id": "1f1338d795b880c38712df0659b4b7a2",
+    "update_date": "2025-05-18",
+    "post_title": "2025-05-18-Istio 트러블 슈팅"
   }
 ]
