--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -543,5 +543,10 @@
     "id": "1f7338d795b880668c3ec2e47d676eb1",
     "update_date": "2025-05-18",
     "post_title": "2025-05-18-istio Ambient mode"
+  },
+  {
+    "id": "1f7338d795b8809d9b44df6780946ddf",
+    "update_date": "2025-05-18",
+    "post_title": "2025-05-18-Istio Sidecar"
   }
 ]
