--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -548,5 +548,10 @@
     "id": "1f7338d795b8809d9b44df6780946ddf",
     "update_date": "2025-05-18",
     "post_title": "2025-05-18-Istio Sidecar"
+  },
+  {
+    "id": "29f338d795b8803b9749d73386d03ce6",
+    "update_date": "2025-11-02",
+    "post_title": "2025-11-02-Node Lifecycle"
   }
 ]
