Update mapping file: 2a6338d795b880689bdce7bade392b4a

--- a/.sync/mapping.json
+++ b/.sync/mapping.json
@@ -553,5 +553,10 @@
     "id": "29f338d795b8803b9749d73386d03ce6",
     "update_date": "2025-11-02",
     "post_title": "2025-11-02-Node Lifecycle"
+  },
+  {
+    "id": "2a6338d795b880689bdce7bade392b4a",
+    "update_date": "2025-11-09",
+    "post_title": "2025-11-09-Completely Fair Scheduler"
   }
 ]
